--- a/senior-data-engineer.html
+++ b/senior-data-engineer.html
@@ -107,12 +107,10 @@
       <h2>Benefits</h2>
       <ul>
         <li>100% remote work with flexible hours</li>
-        <li>Company-paid health insurance (medical, life, STD/LTD)</li>
-        <li>Optional dental, vision, and FSA</li>
-        <li>401(k) with profit sharing</li>
+        <li>Company paid life, STD/LTD insurance</li>
+        <li>Optional medical, dental, vision, and FSA</li>
+        <li>401(k) plan</li>
         <li>Generous PTO and paid holidays</li>
-        <li>Monthly internet/phone and home office stipends</li>
-        <li>Annual professional development budget</li>
       </ul>
     </div>
 
