--- a/index.html
+++ b/index.html
@@ -77,11 +77,17 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Senior Software Engineer -->
                 <a href="senior-data-engineer.html">
-                <div class="bg-white rounded-2xl shadow-lg p-8 transform transition-all duration-300 hover:-translate-y-2 hover:shadow-xl">
-                    <h3 class="text-2xl font-bold text-blue-600 mb-4">Senior Data Engineer</h3>
-                    <p class="text-gray-600 mb-6">Lead our data integration and ETL processes in a fully remote capacity.</p>
-                </div>
-            </a>
+                    <div class="bg-white rounded-2xl shadow-lg p-8 transform transition-all duration-300 hover:-translate-y-2 hover:shadow-xl">
+                        <h3 class="text-2xl font-bold text-blue-600 mb-4">Senior Data Engineer</h3>
+                        <p class="text-gray-600 mb-6">Lead our data integration and ETL processes in a fully remote capacity.</p>
+                    </div>
+                </a>
+                 <a href="senior-software-engineer.html">
+                    <div class="bg-white rounded-2xl shadow-lg p-8 transform transition-all duration-300 hover:-translate-y-2 hover:shadow-xl">
+                        <h3 class="text-2xl font-bold text-blue-600 mb-4">Senior Software Engineer</h3>
+                        <p class="text-gray-600 mb-6">Help build trevco's future and enable success through software.</p>
+                    </div>
+                </a>
             </div>
         </div>
     </section>
