--- a/senior-software-engineer.html
+++ b/senior-software-engineer.html
@@ -78,7 +78,7 @@
     <div class="section">
       <h2>Nice to Haves</h2>
       <ul>
-        <li>Experience with Laravel tools like Forge, Nova, Horizon, and Livewire</li>
+        <li>Experience with Laravel tools like Forge, Nova, Horizon, and Livewire, Filament</li>
         <li>Familiarity with Ruby on Rails, Go, or Python</li>
         <li>Understanding of eCommerce, ERP, or fulfillment systems (e.g., NetSuite)</li>
         <li>Exposure to AI or automation technologies, or interest in applying them to internal tools</li>
